--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "airstack-web-sdk-test": "^1.0.3",
+    "@airstack/airstack-react": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
