--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -12,7 +12,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: development
+    environment: production
     strategy:
       matrix:
         node-version: [16.13.2]
@@ -36,7 +36,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::177826984413:role/githubactions
+          role-to-assume: arn:aws:iam::114810186946:role/githubactions
           role-session-name: Github
           aws-region: ${{ env.AWS_REGION }}
 
