--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "ts-lint": "tsc --noEmit --incremental",
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "pre-commit": "npm run lint && npm run ts-lint"
   },
   "dependencies": {
     "@airstack/airstack-react": "^0.3.2",
@@ -25,8 +28,11 @@
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "husky": "^8.0.0",
     "postcss": "^8.4.24",
     "prettier": "2.8.8",
     "tailwindcss": "^3.3.2",
