--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "pre-commit": "npm run lint && npm run ts-lint"
   },
   "dependencies": {
-    "@airstack/airstack-react": "^0.3.2",
+    "@airstack/airstack-react": "^0.4.2",
     "@reach/router": "^1.3.4",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0"
