--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@airstack/airstack-react": "^0.4.2",
-    "@reach/router": "^1.3.4",
     "classnames": "^2.3.2",
+    "i": "^0.3.7",
+    "npm": "^9.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.14.1",
     "substyle": "^9.4.1"
   },
   "devDependencies": {
