--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build-dev": "tsc && vite build --mode development",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "ts-lint": "tsc --noEmit --incremental",
     "preview": "vite preview",
@@ -25,6 +26,7 @@
     "substyle": "^9.4.1"
   },
   "devDependencies": {
+    "@types/node": "^20.4.4",
     "@types/reach__router": "^1.3.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -43,6 +45,7 @@
     "prettier": "2.8.8",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-ejs": "^1.6.4"
   }
 }
