changed mention api on dev

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 GOOGLE_TAG_MANAGER_ID='GTM-K4NGTBLB'
 API_KEY='ef3d1cdeafb642d3a8d6a44664ce566c'
+MENTION_ENDPOINT='https://bff-prod.airstack.xyz/graphql'
