--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
+    "react-nano-store": "^0.1.3",
     "react-router-dom": "^6.14.1",
     "substyle": "^9.4.1"
   },
