--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i": "^0.3.7",
     "npm": "^9.8.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
