--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 GOOGLE_TAG_MANAGER_ID=''
 API_KEY='ef3d1cdeafb642d3a8d6a44664ce566c'
-MENTION_ENDPOINT='https://bff-prod.airstack.xyz/graphql'
+MENTION_ENDPOINT='https://backend.uat.airstack.xyz/graphql'
