--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "npm run codegen-watch & vite",
+    "prebuild": "npm run codegen && npm run lint && npm run ts-lint",
+    "build": "vite build",
     "build-dev": "tsc && vite build --mode development",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "ts-lint": "tsc --noEmit --incremental",
     "preview": "vite preview",
     "prepare": "husky install",
-    "pre-commit": "npm run lint && npm run ts-lint"
+    "pre-commit": "npm run codegen && npm run lint && npm run ts-lint",
+    "codegen": "graphql-codegen --config codegen.ts",
+    "codegen-watch": "graphql-codegen --watch --config codegen.ts"
   },
   "dependencies": {
     "@airstack/airstack-react": "^0.6.2",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@privy-io/react-auth": "^1.49.2",
     "classnames": "^2.3.2",
     "comlink": "^4.4.1",
     "react": "^18.2.0",
