--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 GOOGLE_TAG_MANAGER_ID=''
 API_KEY='190fc193f24b34d7cafc3dec305c96b0a'
 MENTION_ENDPOINT='https://backend.uat.airstack.xyz/graphql'
+CSV_ENDPOINT='https://backend.dev.airstack.xyz/graphql'
 PRIVY_APP_ID='clfa8br05001mmj08t4q9lno4'
