--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prepare": "husky install",
     "pre-commit": "npm run codegen && npm run lint && npm run ts-lint",
     "codegen": "graphql-codegen --config codegen.ts",
-    "codegen-watch": "graphql-codegen --watch --config codegen.ts"
+    "codegen-watch": "graphql-codegen --watch --config codegen.ts",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@airstack/airstack-react": "^0.6.2",
@@ -47,6 +48,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "husky": "^8.0.0",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.24",
     "prettier": "2.8.8",
     "tailwindcss": "^3.3.2",
