--- a/.env.uat
+++ b/.env.uat
@@ -1,5 +1,6 @@
 GOOGLE_TAG_MANAGER_ID=''
 API_KEY='190fc193f24b34d7cafc3dec305c96b0a'
 MENTION_ENDPOINT='https://backend.uat.airstack.xyz/graphql'
-CSV_ENDPOINT='https://backend.uat.airstack.xyz/graphql'
+BFF_ENDPOINT='https://backend.uat.airstack.xyz/graphql'
+AIRSTACK_ENDPOINT='https://api.uat.airstack.xyz/gql'
 PRIVY_APP_ID=''
