--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@airstack/airstack-react": "^0.6.2",
+    "@airstack/airstack-react": "0.6.2",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@privy-io/react-auth": "^1.49.2",
