--- a/.github/workflows/deploy-uat.yaml
+++ b/.github/workflows/deploy-uat.yaml
@@ -34,7 +34,7 @@ jobs:
           NODE_OPTIONS: --max_old_space_size=4096
           PRIVY_APP_ID: ${{ secrets.PRIVY_APP_ID }}
           GOOGLE_TAG_MANAGER_ID: ''
-          API_KEY: ${{ secrets.API_KEY }}
+          API_KEY: ${{ secrets.UAT_API_KEY }}
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
