--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -38,6 +38,7 @@ jobs:
           MENTION_ENDPOINT: 'https://bff-prod.airstack.xyz/graphql'
           AIRSTACK_ENDPOINT: 'https://api.airstack.xyz/gql'
           APP_BASE_URL: 'https://app.airstack.xyz'
+          BFF_ENDPOINT: 'https://bff-prod.airstack.xyz/graphql'
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
