--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,5 @@ API_KEY='190fc193f24b34d7cafc3dec305c96b0a'
 MENTION_ENDPOINT='https://backend.uat.airstack.xyz/graphql'
 BFF_ENDPOINT='https://backend.dev.airstack.xyz/graphql'
 AIRSTACK_ENDPOINT='https://api.airstack.xyz/gql'
+FRAMES_ENDPOINT='https://frames.dev.airstack.xyz'
 PRIVY_APP_ID='clfa8br05001mmj08t4q9lno4'
