--- a/.env.uat
+++ b/.env.uat
@@ -3,5 +3,5 @@ API_KEY='190fc193f24b34d7cafc3dec305c96b0a'
 MENTION_ENDPOINT='https://backend.uat.airstack.xyz/graphql'
 BFF_ENDPOINT='https://backend.uat.airstack.xyz/graphql'
 AIRSTACK_ENDPOINT='https://api.uat.airstack.xyz/gql'
-FRAMES_ENDPOINT='https://frames.airstack.xyz'
+FRAMES_ENDPOINT='https://frames.dev.airstack.xyz'
 PRIVY_APP_ID=''
