add missing bff endpoint

--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,4 @@ MENTION_ENDPOINT='https://bff-prod.airstack.xyz/graphql'
 AIRSTACK_ENDPOINT='https://api.airstack.xyz/gql'
 FRAMES_ENDPOINT='https://frames.airstack.xyz'
 APP_BASE_URL='http://app.airstack.xyz'
+BFF_ENDPOINT='https://bff-prod.airstack.xyz/graphql'
