--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.1",
     "@airstack/airstack-react": "0.6.2",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/typescript-operations": "^4.0.1",
-    "@privy-io/react-auth": "^1.49.2",
+    "@privy-io/react-auth": "1.57.2",
     "classnames": "^2.3.2",
     "comlink": "^4.4.1",
+    "next": "14.1.1",
+    "react": "^18",
     "react-calendar": "^4.6.0",
+    "react-dom": "^18",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
     "react-nano-store": "^0.1.3",
@@ -38,17 +38,17 @@
     "substyle": "^9.4.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.0",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
     "husky": "^8.0.0",
-    "patch-package": "^8.0.0"
+    "patch-package": "^8.0.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
