--- a/.github/workflows/deploy-uat.yaml
+++ b/.github/workflows/deploy-uat.yaml
@@ -16,7 +16,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: uat
+    environment: production
 
     steps:
       - name: Checkout
@@ -41,6 +41,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
+          export ENV=uat
           docker buildx build --platform=linux/amd64 -t  $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG  --build-arg ENV=uat --build-arg PRIVY_APP_ID=$PRIVY_APP_ID --build-arg API_KEY=$API_KEY .
 
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
