--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -38,10 +38,11 @@ jobs:
         env:
           API_KEY: ${{ secrets.API_KEY }}
           PRIVY_APP_ID: ${{ secrets.DEV_PRIVY_APP_ID }}
+          FRAMES_VALIDATION_BYPASS_SECRET: ${{ secrets.FRAMES_VALIDATION_BYPASS_SECRET }}
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker buildx build --platform=linux/amd64 -t  $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG  --build-arg ENV=development --build-arg PRIVY_APP_ID=$PRIVY_APP_ID --build-arg API_KEY=$API_KEY .
+          docker buildx build --platform=linux/amd64 -t  $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG  --build-arg ENV=development --build-arg PRIVY_APP_ID=$PRIVY_APP_ID --build-arg API_KEY=$API_KEY --build-arg FRAMES_VALIDATION_BYPASS_SECRET=$FRAMES_VALIDATION_BYPASS_SECRET .
 
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
